--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css"> 
 </head>
 
@@ -27,8 +29,19 @@
         <input class="input-field" type="password" id="senha" placeholder="*********" required>
 
         <div class="linha">
-            <button class="botao" id="sign-in" type="button">Sign in</button>
-            <button class="botao" type="button">Sign out</button>
+            <button ype="button"  id="sign-in" class="btn btn-primary ">Sign-in </button>
+
+
+         <!-- <button class="botao" id="sign-in" type="button">Sign in</button> -->
+            
+          <!--   <button class="botao" type="button">Sign out</button> -->
+
+        </div>
+
+        <div class="texto">  
+            <a href="#" onclick="alert('Não é possivel criar sua conta.')">Criar conta</a>
+            
+
 
         </div>
 
